# Inernet-Radio

./: .gitignore  ACTION_PLAN.md  eslint.config.js  package-lock.json  package.json  readme.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
src/: api.js  audio.js  constants.js  db.js  dom.js  i18n.js  index.html  main.js  player.js  state.js  stations.js  styles.css  ui.js  util.js  visualizer.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: get_proxy_port.toml  get_stream_metadata.toml  is_recording.toml  restart_app.toml
src-tauri/src/: main.rs  metadata.rs  proxy.rs  recording.rs  updater.rs
src/js/: main.js
src/js/core/: constants.js  db.js  dom.js  favicon.js  state.js  util.js
src/js/features/: player.js  presets.js  searchDropdown.js  sources.js  stations.js
src/js/features/player/: connection.js  mediaSession.js  metadata.js  playback.js  proxy.js  recording.js  volume.js
src/js/features/stations/: blacklist.js  catalog.js  custom.js  favorites.js  history.js  io.js  m3u.js  recent.js  render.js  search.js
src/js/services/: api.js  audio.js  visualizer.js
src/js/ui/: ui.js
src/styles/: forms.css  index.css  layout.css  modal.css  overlays.css  player.css  responsive.css  settings.css  stations.css  tokens.css
src/worklets/: pcm-player.js
