[package]
name = "internet-radio"
version = "1.0.13"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-window-state = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "time", "rt-multi-thread", "fs"] }
native-tls = "0.2"
tokio-native-tls = "0.3"
percent-encoding = "2.3"

# Auto-updater (desktop only). Configured via plugins.updater in
# tauri.conf.json (endpoints + pubkey).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[profile.release]
strip = true
lto = true
